<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.PlacesActivity"
    tools:showIn="@layout/activity_places">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/list_places"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>